// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Snapshot tests Snapshot test for Active Problems Table should match snapshot 1`] = `
<div>
  <table
    class="usa-table usa-table--borderless width-full table-caption-margin margin-y-0 border-top border-left border-right"
    data-testid="table"
  >
    <caption>
      Problems List
    </caption>
    <thead>
      <tr>
        <th
          class="table-header"
          scope="col"
        >
          Active Problem
        </th>
        <th
          class="table-header"
          scope="col"
        >
          Status
        </th>
        <th
          class="table-header"
          scope="col"
        >
          Onset Date/Time
        </th>
        <th
          class="table-header"
          scope="col"
        >
          Onset Age
        </th>
        <th
          class="table-header"
          scope="col"
        >
          Comments
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="text-top text-pre-line"
        >
          Malignant neoplasm of lower-inner quadrant of left breast in female, estrogen receptor positive
        </td>
        <td
          class="text-top text-pre-line"
        >
          Active
        </td>
        <td
          class="text-top text-pre-line"
        >
          12/14/2022
        </td>
        <td
          class="text-top text-pre-line"
        >
          123 years
        </td>
        <td
          class="text-top text-pre-line"
        >
          <button
            aria-controls="hidden-comment-r:id"
            aria-expanded="false"
            class="usa-button usa-button--unstyled"
            data-test-id="comment-button"
            data-testid="button"
            type="button"
          >
            View
             
            comment
          </button>
        </td>
      </tr>
      <tr
        hidden=""
        id="hidden-comment-r:id"
      >
        <td
          class="p-list"
          colspan="5"
        >
          <div
            class="border-top border-base-lighter margin-top-neg-105 margin-bottom-1"
          />
          Test note
        </td>
      </tr>
      <tr>
        <td
          class="text-top text-pre-line"
        >
          Headache
        </td>
        <td
          class="text-top text-pre-line"
        >
          Active
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
        <td
          class="text-top text-pre-line"
        >
          152 years
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
      </tr>
      <tr>
        <td
          class="text-top text-pre-line"
        >
          Backache
        </td>
        <td
          class="text-top text-pre-line"
        >
          Active
        </td>
        <td
          class="text-top text-pre-line"
        >
          08/19/2018 1:00 PM
        </td>
        <td
          class="text-top text-pre-line"
        >
          141 years
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
      </tr>
      <tr>
        <td
          class="text-top text-pre-line"
        >
          Headache
        </td>
        <td
          class="text-top text-pre-line"
        >
          Active
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
        <td
          class="text-top text-pre-line"
        >
          1 year
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
      </tr>
      <tr>
        <td
          class="text-top text-pre-line"
        >
          Backache
        </td>
        <td
          class="text-top text-pre-line"
        >
          Active
        </td>
        <td
          class="text-top text-pre-line"
        >
          06/28/1877
        </td>
        <td
          class="text-top text-pre-line"
        >
          1 month, 3 days
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Snapshot tests Snapshot test for History of Present Illness should match snapshot for non table notes 1`] = `
<div>
  <div
    class="margin-top-0"
  >
    <div
      class="padding-bottom-3"
    >
      <div
        class="usa-summary-box__body"
      >
        <div
          class="gutter-3"
        >
          <h4
            class="usa-summary-box__heading padding-y-105"
            id="symptoms-and-problems"
          >
            Symptoms and Problems
          </h4>
          <div
            class="usa-summary-box__text"
          >
            <div
              data-testid="reason-for-visit"
            />
            <div
              data-testid="active-problems"
            >
              <div />
            </div>
            <div
              data-testid="history-of-present-illness"
            >
              <div>
                <div
                  class="grid-row"
                >
                  <div
                    class="data-title padding-right-1"
                  >
                    History of Present Illness
                  </div>
                  <div
                    class="grid-col maxw7 text-pre-line p-list"
                  >
                    <p>
                      This patient was only recently discharged for a recurrent GI bleed as described
                    </p>
                  </div>
                </div>
                <div
                  class="section__line_gray"
                />
              </div>
            </div>
            <div
              data-testid="emergency-outbreak-info"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot tests Snapshot test for History of Present Illness should match snapshot for table notes 1`] = `
<div>
  <div
    class="margin-top-0"
  >
    <div
      class="padding-bottom-3"
    >
      <div
        class="usa-summary-box__body"
      >
        <div
          class="gutter-3"
        >
          <h4
            class="usa-summary-box__heading padding-y-105"
            id="symptoms-and-problems"
          >
            Symptoms and Problems
          </h4>
          <div
            class="usa-summary-box__text"
          >
            <div
              data-testid="reason-for-visit"
            />
            <div
              data-testid="active-problems"
            >
              <div />
            </div>
            <div
              data-testid="history-of-present-illness"
            >
              <div>
                <div
                  class="grid-row flex-column"
                >
                  <div
                    class="data-title padding-right-1"
                  >
                    Miscellaneous Notes
                  </div>
                  <div
                    class="grid-col width-full text-pre-line p-list"
                  >
                    <table
                      class="usa-table usa-table--borderless width-full table-caption-margin caption-normal-weight margin-bottom-2 border-top border-left border-right"
                      data-testid="table"
                    >
                      <caption>
                        <div
                          class="display-flex flex-align-baseline"
                        >
                          <div
                            class="data-title"
                          >
                            Miscellaneous Notes
                          </div>
                          <span
                            class="usa-tooltip"
                            data-testid="tooltipWrapper"
                          >
                            <div
                              aria-describedby="tooltip-r:id"
                              class="usa-tooltip__trigger margin-left-05 usa-tooltip"
                              data-testid="triggerElement"
                              tabindex="0"
                            >
                              <svg
                                aria-label="description"
                                class="usa-icon tooltip-icon text-secondary flex-align-center"
                                focusable="false"
                                height="1em"
                                role="img"
                                viewBox="0 0 24 24"
                                width="1em"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M0 0h24v24H0V0z"
                                  fill="none"
                                />
                                <path
                                  d="M11 7h2v2h-2V7zm0 4h2v6h-2v-6zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                                />
                              </svg>
                            </div>
                            <span
                              aria-hidden="true"
                              class="usa-tooltip__body"
                              data-testid="tooltipBody"
                              id="tooltip-r:id"
                              role="tooltip"
                              title="Clinical notes from various parts of a medical record. Type of note found here depends on how the provider's EHR system onboarded to send eCR."
                            >
                              Clinical notes from various parts of a medical record. Type of note found here depends on how the provider's EHR system onboarded to send eCR.
                            </span>
                          </span>
                        </div>
                      </caption>
                      <thead>
                        <tr>
                          <th
                            class="table-header bg-gray-5"
                            scope="col"
                            style="min-width: 10rem;"
                          >
                            Active Problems
                          </th>
                          <th
                            class="table-header bg-gray-5"
                            scope="col"
                            style="min-width: 10rem;"
                          >
                            Noted Date
                          </th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td>
                            Parkinson's syndrome
                          </td>
                          <td>
                            07/25/2022
                          </td>
                        </tr>
                        <tr>
                          <td>
                            Essential hypertension
                          </td>
                          <td>
                            07/21/2022
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
                <div
                  class="section__line_gray"
                />
              </div>
            </div>
            <div
              data-testid="emergency-outbreak-info"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot tests Snapshot test for Immunizations Table should match snapshot 1`] = `
<div>
  <table
    class="usa-table usa-table--borderless width-full _fixed_1khz6_1 table-caption-margin margin-y-0 border-top border-left border-right"
    data-testid="table"
  >
    <caption>
      Immunization History
    </caption>
    <thead>
      <tr>
        <th
          class="table-header"
          scope="col"
        >
          Name
        </th>
        <th
          class="table-header minw-10"
          scope="col"
        >
          Effective Date/Time
        </th>
        <th
          class="table-header minw-15"
          scope="col"
        >
          Status
        </th>
        <th
          class="table-header minw-15"
          scope="col"
        >
          Status Reason
        </th>
        <th
          class="table-header minw-10"
          scope="col"
        >
          Dose Number
        </th>
        <th
          class="table-header minw-18"
          scope="col"
        >
          Manufacturer
        </th>
        <th
          class="table-header minw-15"
          scope="col"
        >
          Lot Number
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="text-top text-pre-line"
        >
          MENINGOCOCCAL CONJUGATE,MENACTRA                                        (PED/ADOL/ADULT)
        </td>
        <td
          class="text-top text-pre-line"
        >
          11/16/2020
        </td>
        <td
          class="text-top text-pre-line"
        >
          completed
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
      </tr>
      <tr>
        <td
          class="text-top text-pre-line"
        >
          TDAP, (ADOL/ADULT)
        </td>
        <td
          class="text-top text-pre-line"
        >
          11/10/2020 6:20 AM EST
        </td>
        <td
          class="text-top text-pre-line"
        >
          completed
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
        <td
          class="text-top text-pre-line"
        >
          1
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
        <td
          class="text-top text-pre-line"
        >
          369258741
        </td>
      </tr>
      <tr>
        <td
          class="text-top text-pre-line"
        >
          influenza, intradermal, quadrivalent
        </td>
        <td
          class="text-top text-pre-line"
        >
          01/15/2015
        </td>
        <td
          class="text-top text-pre-line"
        >
          not-done
        </td>
        <td
          class="text-top text-pre-line"
        >
          patient objection
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
      </tr>
      <tr>
        <td
          class="text-top text-pre-line"
        >
          HEP A (ADULT) 2 DOSE
        </td>
        <td
          class="text-top text-pre-line"
        >
          11/11/2011
        </td>
        <td
          class="text-top text-pre-line"
        >
          completed
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
      </tr>
      <tr>
        <td
          class="text-top text-pre-line"
        >
          DTAP-HIB-IPV (PENTACEL)
        </td>
        <td
          class="text-top text-pre-line"
        >
          04/16/2010
        </td>
        <td
          class="text-top text-pre-line"
        >
          completed
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
      </tr>
      <tr>
        <td
          class="text-top text-pre-line"
        >
          HEP B (PED,ADOLESCENT) 3 DOSE
        </td>
        <td
          class="text-top text-pre-line"
        >
          03/21/1974
        </td>
        <td
          class="text-top text-pre-line"
        >
          completed
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
        <td
          class="text-top text-pre-line"
        >
          <span
            class="text-italic text-base"
          >
            No data
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Snapshot tests Snapshot test for Procedures (Treatment Details) should match snapshot 1`] = `
<div>
  <div
    class="margin-top-0"
  >
    <div
      class="padding-bottom-3"
    >
      <div
        class="usa-summary-box__body"
      >
        <div
          class="gutter-3"
        >
          <h4
            class="usa-summary-box__heading padding-y-105"
            id="treatment-details"
          >
            Treatment Details
          </h4>
          <div
            class="usa-summary-box__text"
          >
            <div
              data-testid="treatment-details"
            >
              <div>
                <div
                  class="grid-row"
                >
                  <div
                    class="data-title padding-right-1"
                  >
                    Procedures
                  </div>
                  <div
                    class="grid-col maxw7 text-pre-line p-list"
                  >
                    <table
                      class="usa-table usa-table--borderless width-full _fixed_1khz6_1 table-caption-margin margin-y-0 border-top border-left border-right"
                      data-testid="table"
                    >
                      <thead>
                        <tr>
                          <th
                            class="table-header"
                            scope="col"
                          >
                            Name
                          </th>
                          <th
                            class="table-header"
                            scope="col"
                          >
                            Date/Time Performed
                          </th>
                          <th
                            class="table-header"
                            scope="col"
                          >
                            Status
                          </th>
                          <th
                            class="table-header"
                            scope="col"
                          >
                            Details
                          </th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td
                            class="text-top text-pre-line"
                          >
                            HC HETEROPHILE ANTIBODIES SCREENING
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            02/04/2025 12:53 PM EST
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            completed
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            <span
                              class="text-italic text-base"
                            >
                              No data
                            </span>
                          </td>
                        </tr>
                        <tr>
                          <td
                            class="text-top text-pre-line"
                          >
                            Colonic polypectomy
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            11/15/2020
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            final
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            <button
                              aria-controls="hidden-comment-r:id"
                              aria-expanded="false"
                              class="usa-button usa-button--unstyled"
                              data-test-id="comment-button"
                              data-testid="button"
                              type="button"
                            >
                              View
                               
                              details
                            </button>
                          </td>
                        </tr>
                        <tr
                          hidden=""
                          id="hidden-comment-r:id"
                        >
                          <td
                            class="p-list"
                            colspan="4"
                          >
                            <div
                              class="border-top border-base-lighter margin-top-neg-105 margin-bottom-1"
                            />
                            <div>
                              <div
                                class="grid-row"
                              >
                                <div
                                  class="data-title padding-right-1"
                                >
                                  Body Site
                                </div>
                                <div
                                  class="grid-col maxw7 text-pre-line p-list"
                                >
                                  Abdomen and pelvis
                                </div>
                              </div>
                            </div>
                          </td>
                        </tr>
                        <tr>
                          <td
                            class="text-top text-pre-line"
                          >
                            LOINC codes are better
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            Start: 11/01/2016 10:34 PM
End: 11/02/2016 2:43 AM
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            completed
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            <button
                              aria-controls="hidden-comment-r:id"
                              aria-expanded="false"
                              class="usa-button usa-button--unstyled"
                              data-test-id="comment-button"
                              data-testid="button"
                              type="button"
                            >
                              View
                               
                              details
                            </button>
                          </td>
                        </tr>
                        <tr
                          hidden=""
                          id="hidden-comment-r:id"
                        >
                          <td
                            class="p-list"
                            colspan="4"
                          >
                            <div
                              class="border-top border-base-lighter margin-top-neg-105 margin-bottom-1"
                            />
                            <div>
                              <div
                                class="grid-row"
                              >
                                <div
                                  class="data-title padding-right-1"
                                >
                                  Reason
                                </div>
                                <div
                                  class="grid-col maxw7 text-pre-line p-list"
                                >
                                  Routine general medical examination at a health care facility
                                </div>
                              </div>
                              <div
                                class="section__line_gray"
                              />
                            </div>
                            <div>
                              <div
                                class="grid-row"
                              >
                                <div
                                  class="data-title padding-right-1"
                                >
                                  Method
                                </div>
                                <div
                                  class="grid-col maxw7 text-pre-line p-list"
                                >
                                  the way we felt like it
                                </div>
                              </div>
                              <div
                                class="section__line_gray"
                              />
                            </div>
                            <div>
                              <div
                                class="grid-row"
                              >
                                <div
                                  class="data-title padding-right-1"
                                >
                                  Complication
                                </div>
                                <div
                                  class="grid-col maxw7 text-pre-line p-list"
                                >
                                  Nausea
Heartburn
                                </div>
                              </div>
                              <div
                                class="section__line_gray"
                              />
                            </div>
                            <div>
                              <div
                                class="grid-row"
                              >
                                <div
                                  class="data-title padding-right-1"
                                >
                                  Priority
                                </div>
                                <div
                                  class="grid-col maxw7 text-pre-line p-list"
                                >
                                  call black please
                                </div>
                              </div>
                              <div
                                class="section__line_gray"
                              />
                            </div>
                            <div>
                              <div
                                class="grid-row"
                              >
                                <div
                                  class="data-title padding-right-1"
                                >
                                  Specimen
                                </div>
                                <div
                                  class="grid-col maxw7 text-pre-line p-list"
                                >
                                  anal polyp
bile duct
                                </div>
                              </div>
                              <div
                                class="section__line_gray"
                              />
                            </div>
                            <div>
                              <div
                                class="grid-row"
                              >
                                <div
                                  class="data-title padding-right-1"
                                >
                                  Product
                                </div>
                                <div
                                  class="grid-col maxw7 text-pre-line p-list"
                                >
                                  Colonoscope
ID: (01)51022222233336(11)141231(17)150707(10)A213B1(21)1234
                                </div>
                              </div>
                              <div
                                class="section__line_gray"
                              />
                            </div>
                            <div>
                              <div
                                class="grid-row"
                              >
                                <div
                                  class="data-title padding-right-1"
                                >
                                  Medication
                                </div>
                                <div
                                  class="grid-col maxw7 text-pre-line p-list"
                                >
                                  Atenolol 25 MG Oral Tablet
                                </div>
                              </div>
                              <div
                                class="section__line_gray"
                              />
                            </div>
                            <div>
                              <div
                                class="grid-row"
                              >
                                <div
                                  class="data-title padding-right-1"
                                >
                                  Service Location
                                </div>
                                <div
                                  class="grid-col maxw7 text-pre-line p-list"
                                >
                                  1002 Healthcare Drive
Ann Arbor, MI 99999
US
                                </div>
                              </div>
                              <div
                                class="section__line_gray"
                              />
                            </div>
                            <div>
                              <div
                                class="grid-row"
                              >
                                <div
                                  class="data-title padding-right-1"
                                >
                                  Organization
                                </div>
                                <div
                                  class="grid-col maxw7 text-pre-line p-list"
                                >
                                  Good Health Hospital
1000 Hospital Lane
Ann Arbor, MI 99999
US
Work: 555-555-1212
Work Fax: 555-555-3333
                                </div>
                              </div>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
                <div
                  class="section__line_gray"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot tests Snapshot tests for Clinical Info components should match snapshot for all Clinical Info components 1`] = `
<div>
  <div
    class="margin-top-0"
  >
    <div
      class="padding-bottom-3"
    >
      <div
        class="usa-summary-box__body"
      >
        <div
          class="gutter-3"
        >
          <h4
            class="usa-summary-box__heading padding-y-105"
            id="symptoms-and-problems"
          >
            Symptoms and Problems
          </h4>
          <div
            class="usa-summary-box__text"
          >
            <div
              data-testid="reason-for-visit"
            >
              <div>
                <div
                  class="grid-row"
                >
                  <div
                    class="data-title padding-right-1"
                  >
                    Reason for Visit
                  </div>
                  <div
                    class="grid-col maxw7 text-pre-line p-list"
                  >
                    <div>
                      Abdominal Cramping
                    </div>
                  </div>
                </div>
                <div
                  class="section__line_gray"
                />
              </div>
            </div>
            <div
              data-testid="active-problems"
            >
              <div>
                <div>
                  <div
                    class="grid-col-auto text-pre-line table-clinical-problems"
                  >
                    <table
                      class="usa-table usa-table--borderless width-full table-caption-margin margin-y-0 border-top border-left border-right"
                      data-testid="table"
                    >
                      <caption>
                        Problems List
                      </caption>
                      <thead>
                        <tr>
                          <th
                            class="table-header"
                            scope="col"
                          >
                            Active Problem
                          </th>
                          <th
                            class="table-header"
                            scope="col"
                          >
                            Status
                          </th>
                          <th
                            class="table-header"
                            scope="col"
                          >
                            Onset Date/Time
                          </th>
                          <th
                            class="table-header"
                            scope="col"
                          >
                            Onset Age
                          </th>
                          <th
                            class="table-header"
                            scope="col"
                          >
                            Comments
                          </th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td
                            class="text-top text-pre-line"
                          >
                            Cleft hard palate
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            Recurrence
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            04/13/2021
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            <span
                              class="text-italic text-base"
                            >
                              No data
                            </span>
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            <span
                              class="text-italic text-base"
                            >
                              No data
                            </span>
                          </td>
                        </tr>
                        <tr>
                          <td
                            class="text-top text-pre-line"
                          >
                            Sprain of calcaneofibular ligament of right ankle
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            Active
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            08/02/2018
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            <span
                              class="text-italic text-base"
                            >
                              No data
                            </span>
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            <span
                              class="text-italic text-base"
                            >
                              No data
                            </span>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
              </div>
            </div>
            <div
              data-testid="history-of-present-illness"
            />
            <div
              data-testid="emergency-outbreak-info"
            >
              <div>
                <div
                  class="grid-row"
                >
                  <div
                    class="data-title padding-right-1"
                  >
                    Emergency Outbreak Info
                  </div>
                  <div
                    class="grid-col maxw7 text-pre-line p-list"
                  >
                    Start: 11/01/2020
Type: Employee desk distance from mail sorter
Result: 2 m
                  </div>
                </div>
                <div
                  class="section__line_gray"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="gutter-3"
        >
          <h4
            class="usa-summary-box__heading padding-y-105"
            id="treatment-details"
          >
            Treatment Details
          </h4>
          <div
            class="usa-summary-box__text"
          >
            <div
              data-testid="treatment-details"
            >
              <div>
                <div
                  class="grid-row flex-column"
                >
                  <div
                    class="data-title padding-right-1"
                  >
                    Procedures
                  </div>
                  <div
                    class="grid-col width-full text-pre-line p-list"
                  >
                    <table
                      class="usa-table usa-table--borderless width-full _fixed_1khz6_1 table-caption-margin margin-y-0 border-top border-left border-right"
                      data-testid="table"
                    >
                      <thead>
                        <tr>
                          <th
                            class="table-header"
                            scope="col"
                          >
                            Name
                          </th>
                          <th
                            class="table-header"
                            scope="col"
                          >
                            Date/Time Performed
                          </th>
                          <th
                            class="table-header"
                            scope="col"
                          >
                            Status
                          </th>
                          <th
                            class="table-header"
                            scope="col"
                          >
                            Details
                          </th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td
                            class="text-top text-pre-line"
                          >
                            HC HETEROPHILE ANTIBODIES SCREENING
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            02/04/2025 12:53 PM EST
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            completed
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            <span
                              class="text-italic text-base"
                            >
                              No data
                            </span>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
                <div
                  class="section__line_gray"
                />
              </div>
              <div>
                <div
                  class="grid-row flex-column"
                >
                  <div
                    class="data-title padding-right-1"
                  >
                    Plan of Treatment
                  </div>
                  <div
                    class="grid-col width-full text-pre-line p-list"
                  >
                    <table
                      class="usa-table usa-table--borderless width-full _fixed_1khz6_1 table-caption-margin border-top border-left border-right"
                      data-testid="table"
                    >
                      <caption>
                        Planned Activities & Appointments
                      </caption>
                      <thead>
                        <tr>
                          <th
                            class="table-header"
                            scope="col"
                          >
                            Name
                          </th>
                          <th
                            class="table-header"
                            scope="col"
                          >
                            Scheduled Time
                          </th>
                          <th
                            class="table-header"
                            scope="col"
                          >
                            Type
                          </th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td
                            class="text-top text-pre-line"
                          >
                            <span
                              class="text-italic text-base"
                            >
                              No data
                            </span>
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            02/04/2024 4:08 PM EST
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            <span
                              class="text-italic text-base"
                            >
                              No data
                            </span>
                          </td>
                        </tr>
                        <tr>
                          <td
                            class="text-top text-pre-line"
                          >
                            Ammonia plas
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            02/04/2024 3:03 PM EST
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            <span
                              class="text-italic text-base"
                            >
                              No data
                            </span>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
                <div
                  class="section__line_gray"
                />
              </div>
              <div>
                <div
                  class="grid-row flex-column"
                >
                  <div
                    class="data-title padding-right-1"
                  >
                    Administered Medications
                  </div>
                  <div
                    class="grid-col width-full text-pre-line p-list"
                  >
                    <table
                      class="usa-table usa-table--borderless width-full table-caption-margin margin-y-0 border-top border-left border-right"
                      data-testid="table"
                    >
                      <thead>
                        <tr>
                          <th
                            class="table-header bg-gray-5 minw-15"
                            scope="col"
                          >
                            Medication Name
                          </th>
                          <th
                            class="table-header bg-gray-5 minw-15"
                            scope="col"
                          >
                            Medication Start Date/Time
                          </th>
                          <th
                            class="table-header bg-gray-5 minw-15"
                            scope="col"
                          >
                            Dose
                          </th>
                          <th
                            class="table-header bg-gray-5 minw-15"
                            scope="col"
                          >
                            Route
                          </th>
                          <th
                            class="table-header bg-gray-5 minw-15"
                            scope="col"
                          >
                            Therapeutic Response Observation
                          </th>
                          <th
                            class="table-header bg-gray-5 minw-15"
                            scope="col"
                          >
                            Text
                          </th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td>
                            <span
                              class="text-italic text-base"
                            >
                              No data
                            </span>
                          </td>
                          <td>
                            02/01/2025 11:00 PM EST
                          </td>
                          <td>
                            325 mg
                          </td>
                          <td>
                            Oral
                          </td>
                          <td>
                            <span
                              class="text-italic text-base"
                            >
                              No data
                            </span>
                          </td>
                          <td>
                            <span
                              class="text-italic text-base"
                            >
                              No data
                            </span>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
                <div
                  class="section__line_gray"
                />
              </div>
              <div>
                <div
                  class="grid-row flex-column"
                >
                  <div
                    class="data-title padding-right-1"
                  >
                    Medications
                  </div>
                  <div
                    class="grid-col width-full text-pre-line p-list"
                  >
                    <div
                      class="display-flex"
                    >
                      <div
                        class="margin-left-auto padding-top-1"
                      >
                        <button
                          class="usa-button usa-button--unstyled"
                          data-testid="button"
                          type="button"
                        >
                          Expand all 
                          medications
                        </button>
                        <span
                          class="vertical-line"
                        />
                        <button
                          class="usa-button usa-button--unstyled"
                          data-testid="button"
                          type="button"
                        >
                          Collapse all 
                          medications
                        </button>
                      </div>
                    </div>
                    <div
                      class="usa-accordion accordion-rr"
                      data-allow-multiple="true"
                      data-testid="accordion"
                    >
                      <h5
                        class="usa-accordion__heading side-nav-ignore"
                      >
                        <button
                          aria-controls="af5bd386-47c1-43ba-ba13-457b1c1dca64-r:id-0"
                          aria-expanded="false"
                          class="usa-accordion__button"
                          data-testid="accordionButton_af5bd386-47c1-43ba-ba13-457b1c1dca64-r:id-0"
                          type="button"
                        >
                          <div
                            class="display-flex flex-row flex-no-wrap flex-justify"
                          >
                            <span>
                              Lisinopril 10 mg oral tablet
                            </span>
                            <span
                              class="font-size-xs text-base"
                            >
                              Active
                            </span>
                          </div>
                        </button>
                      </h5>
                      <div
                        class="usa-accordion__content usa-prose side-nav-ignore"
                        data-testid="accordionItem_af5bd386-47c1-43ba-ba13-457b1c1dca64-r:id-0"
                        hidden=""
                        id="af5bd386-47c1-43ba-ba13-457b1c1dca64-r:id-0"
                      >
                        <div>
                          <div
                            class="grid-row"
                          >
                            <div
                              class="data-title padding-right-1"
                            >
                              Date/Time
                            </div>
                            <div
                              class="grid-col maxw7 text-pre-line p-list"
                            >
                              02/25/2026 12:00 AM
                            </div>
                          </div>
                        </div>
                        <div>
                          <div
                            class="grid-row"
                          >
                            <div
                              class="data-title padding-right-1"
                            >
                              Timing
                            </div>
                            <div
                              class="grid-col maxw7 text-pre-line p-list"
                            >
                              1 d
                            </div>
                          </div>
                        </div>
                        <div>
                          <div
                            class="grid-row"
                          >
                            <div
                              class="data-title padding-right-1"
                            >
                              Medication Instructions
                            </div>
                            <div
                              class="grid-col maxw7 text-pre-line p-list"
                            >
                              Medication instructions
                            </div>
                          </div>
                        </div>
                        <div>
                          <div
                            class="grid-row"
                          >
                            <div
                              class="data-title padding-right-1"
                            >
                              Dosage Route
                            </div>
                            <div
                              class="grid-col maxw7 text-pre-line p-list"
                            >
                              Oral
                            </div>
                          </div>
                        </div>
                        <div>
                          <div
                            class="grid-row"
                          >
                            <div
                              class="data-title padding-right-1"
                            >
                              Dose Quantity
                            </div>
                            <div
                              class="grid-col maxw7 text-pre-line p-list"
                            >
                              5 mg
                            </div>
                          </div>
                        </div>
                        <div>
                          <div
                            class="grid-row"
                          >
                            <div
                              class="data-title padding-right-1"
                            >
                              Rate Quantity
                            </div>
                            <div
                              class="grid-col maxw7 text-pre-line p-list"
                            >
                              5 mg
                            </div>
                          </div>
                        </div>
                        <div>
                          <div
                            class="grid-row"
                          >
                            <div
                              class="data-title padding-right-1"
                            >
                              Number of refills
                            </div>
                            <div
                              class="grid-col maxw7 text-pre-line p-list"
                            >
                              <span
                                class="text-italic text-base"
                              >
                                No data
                              </span>
                            </div>
                          </div>
                        </div>
                        <div>
                          <div
                            class="grid-row"
                          >
                            <div
                              class="data-title padding-right-1"
                            >
                              Amount of medication to supply per dispense
                            </div>
                            <div
                              class="grid-col maxw7 text-pre-line p-list"
                            >
                              50 mg
                            </div>
                          </div>
                        </div>
                        <div>
                          <div
                            class="grid-row"
                          >
                            <div
                              class="data-title padding-right-1"
                            >
                              Text
                            </div>
                            <div
                              class="grid-col maxw7 text-pre-line p-list"
                            >
                              Free text
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="section__line_gray"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="gutter-3"
        >
          <h4
            class="usa-summary-box__heading padding-y-105"
            id="immunizations"
          >
            Immunizations
          </h4>
          <div
            class="usa-summary-box__text"
          >
            <div
              class="immunization_table"
              data-testid="immunization-history"
            >
              <div>
                <div>
                  <div
                    class="grid-col-auto text-pre-line"
                  >
                    <table
                      class="usa-table usa-table--borderless width-full _fixed_1khz6_1 table-caption-margin margin-y-0 border-top border-left border-right"
                      data-testid="table"
                    >
                      <caption>
                        Immunization History
                      </caption>
                      <thead>
                        <tr>
                          <th
                            class="table-header"
                            scope="col"
                          >
                            Name
                          </th>
                          <th
                            class="table-header minw-10"
                            scope="col"
                          >
                            Effective Date/Time
                          </th>
                          <th
                            class="table-header minw-15"
                            scope="col"
                          >
                            Status
                          </th>
                          <th
                            class="table-header minw-15"
                            scope="col"
                          >
                            Status Reason
                          </th>
                          <th
                            class="table-header minw-10"
                            scope="col"
                          >
                            Dose Number
                          </th>
                          <th
                            class="table-header minw-18"
                            scope="col"
                          >
                            Manufacturer
                          </th>
                          <th
                            class="table-header minw-15"
                            scope="col"
                          >
                            Lot Number
                          </th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td
                            class="text-top text-pre-line"
                          >
                            <span
                              class="text-italic text-base"
                            >
                              No data
                            </span>
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            04/04/2004
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            completed
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            <span
                              class="text-italic text-base"
                            >
                              No data
                            </span>
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            <span
                              class="text-italic text-base"
                            >
                              No data
                            </span>
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            <span
                              class="text-italic text-base"
                            >
                              No data
                            </span>
                          </td>
                          <td
                            class="text-top text-pre-line"
                          >
                            <span
                              class="text-italic text-base"
                            >
                              No data
                            </span>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="gutter-3"
        >
          <h4
            class="usa-summary-box__heading padding-y-105"
            id="diagnostics-and-vital-signs"
          >
            Diagnostics and Vital Signs
          </h4>
          <div
            class="usa-summary-box__text"
          >
            <div
              class="usa-accordion accordion-rr vital-signs-accordion margin-top-0"
              data-testid="accordion"
            >
              <h5
                class="usa-accordion__heading"
              >
                <button
                  aria-controls="vital-signs-content"
                  aria-expanded="false"
                  class="usa-accordion__button"
                  data-testid="accordionButton_vital-signs-content"
                  type="button"
                >
                  Vital Signs
                </button>
              </h5>
              <div
                class="usa-accordion__content usa-prose"
                data-testid="accordionItem_vital-signs-content"
                hidden=""
                id="vital-signs-content"
              >
                <table
                  class="usa-table usa-table--borderless width-full table-caption-margin margin-y-0"
                  data-testid="table"
                >
                  <thead>
                    <tr>
                      <th
                        class="table-header"
                        scope="col"
                      >
                        Vital Reading
                      </th>
                      <th
                        class="table-header"
                        scope="col"
                      >
                        Result
                      </th>
                      <th
                        class="table-header"
                        scope="col"
                      >
                        Date/Time
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        class="text-top text-pre-line"
                      >
                        Weight
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        140 lb
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        02/04/2025 12:48 PM EST
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="text-top text-pre-line"
                      >
                        Weight
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        63.5 kg
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        02/04/2025 12:48 PM EST
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="text-top text-pre-line"
                      >
                        Bmi (body mass index)
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        20 kg/m2
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        02/04/2025 12:48 PM EST
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="text-top text-pre-line"
                      >
                        Height
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        60 in
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        02/04/2025 12:48 PM EST
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="text-top text-pre-line"
                      >
                        Height
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        152.4 cm
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        02/04/2025 12:48 PM EST
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
